fix blockchain animation on Chrome browser, fix system background image height on mobile

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -342,6 +342,7 @@ html {
   display: block;
   width: 25vw !important;
   position: relative !important;
+  margin: auto;
 }
 
 
