--- a/src/scss/rubix-cube.scss
+++ b/src/scss/rubix-cube.scss
@@ -49,6 +49,7 @@ label {
   perspective: 9000px;
   display: none !important;
   top: 50%;
+  margin: auto;
 }
 
 .rubix-container {
